# cookiecutter_science

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  bumpversion.cfg  changelog.md  cookiecutter.json  environment.yml
hooks/: post_gen_project.sh  pre_gen_project.sh
test/: gen.sh
{{ cookiecutter.repo_name }}/: .gitignore  .ruff.toml  Makefile  README.md  environment.yml  install_dependencies.sh  justfile  pyproject.toml  setup.py
{{ cookiecutter.repo_name }}/.devcontainer/: Dockerfile  devcontainer.json  environment.yml
{{ cookiecutter.repo_name }}/code/: pyproject.toml
{{ cookiecutter.repo_name }}/code/notebooks/exploratory/: 1.0-tg-example.ipynb
{{ cookiecutter.repo_name }}/code/project_package/: pyproject.toml
{{ cookiecutter.repo_name }}/code/project_package/data/: config.py  import_data.py  make_dataset.py
{{ cookiecutter.repo_name }}/code/project_package/src/project_package/data/: config.py  example.py  make_dataset.py
{{ cookiecutter.repo_name }}/code/project_package/src/project_package/tools/: clean_bib.py
{{ cookiecutter.repo_name }}/code/project_package/tools/: convert_latex.py
{{ cookiecutter.repo_name }}/code/project_package/visualization/: make_plots.py  visualize.py
{{ cookiecutter.repo_name }}/data/01_raw/: demo.csv
{{ cookiecutter.repo_name }}/dissemination/papers/: minimal.tex
{{ cookiecutter.repo_name }}/dissemination/reports/: minimal.tex
{{ cookiecutter.repo_name }}/literature/: references.bib
{{ cookiecutter.repo_name }}/notebooks/exploratory/: 1.0-tg-example.ipynb
{{ cookiecutter.repo_name }}/presentations/: .gitkeep
{{ cookiecutter.repo_name }}/reports/.devcontainer/: Dockerfile  devcontainer.json
{{ cookiecutter.repo_name }}/src/data/: config.py  import_data.py
{{ cookiecutter.repo_name }}/src/tools/: convert_latex.py  convert_pictures.py  convert_pptx.py
{{ cookiecutter.repo_name }}/src/visualization/: make_plots.py
