[project]
name = "src"
description = "local src package"
version = "0.1.0"
authors = [{ name = "Thomas Gölles", email = "thomas.goelles@gmail.com" }]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.black]
line-length = 120
fast = true


[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version|replace('.', '') }}"