[project]
authors = [{name = "Thomas Gölles", email = "thomas.goelles@gmail.com"}]
description = "local Python package"
name = "project_package"
version = "0.1.0"
requires-python=">=3.12"
dependencies = ["numpy", "matplotlib", "pandas", "polars"]



[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff"
]

