[project]
authors = [{name = "Thomas Gölles", email = "thomas.goelles@gmail.com"}]
description = "local Python package"
name = "project_package"
version = "0.1.0"
requires-python=">=3.12"
dependencies = ["numpy", "matplotlib", "pandas", "polars"]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120

[tool.uv.sources]
project_package = { workspace = true }

[dependency-groups]
dev = [
    "project_package",
    "ipykernel>=6.29.5",
    "ruff"
]

