[project]
name = "project_package"
description = "local Python package"
version = "0.1.0"
authors = [{ name = "Thomas Gölles", email = "thomas.goelles@gmail.com" }]
dependencies = ["numpy", "matplotlib", "pandas", "polars"]
requires-python = ">=3.12"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
